// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header component renders component correctly on desktop 1`] = `
<div>
  <header
    class="Header"
  >
    <div
      class="Logo"
      data-testid="sh-header-logo"
    >
      <img
        alt="Logo"
        src="logo.png"
      />
    </div>
    <div
      class="Menu"
    >
      <nav
        class="Nav"
        data-testid="sh-header-nav"
      >
        <a
          aria-current="page"
          class="Active"
          data-discover="true"
          href="/"
        >
          <span
            class="LinkText"
          >
            Availability
          </span>
        </a>
        <a
          class=""
          data-discover="true"
          href="/legal"
        >
          <span
            class="LinkText"
          >
            Legal
          </span>
        </a>
        <a
          class=""
          data-discover="true"
          href="/admin"
        >
          <span
            class="LinkText"
          >
            Admin
          </span>
        </a>
        <a
          class=""
          data-discover="true"
          href="/test-module-route"
        >
          <span
            class="LinkText"
          >
            test-module-name
          </span>
        </a>
      </nav>
      <div
        class="Additional"
      >
        <div
          data-testid="downloads-status-mock"
        >
          Downloads Status component
        </div>
        <div
          data-testid="auth-button-mock"
        >
          Auth Button component
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header component renders component correctly on mobile and tablets 1`] = `
<div>
  <header
    class="Header"
  >
    <div
      class="Logo"
      data-testid="sh-header-logo"
    >
      <img
        alt="Logo"
        src="logo.png"
      />
    </div>
    <div
      class="Menu"
    >
      <div
        class="Additional"
      >
        <div
          data-testid="downloads-status-mock"
        >
          Downloads Status component
        </div>
        <div
          data-testid="auth-button-mock"
        >
          Auth Button component
        </div>
      </div>
    </div>
    <button
      aria-label="Menu"
      class="Hamburger"
      data-testid="sh-header-hamburger"
    >
      <svg
        data-testid="svg-icon-mock"
      >
        mock-svg
      </svg>
    </button>
  </header>
</div>
`;
